retrieveUnpackaged/objects/RTPForms_Repository__c.object
<CustomObject>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contracts</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Forms__c</fullName>
        <label>Contract Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blanket Purchase Agreement (BPA)</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contracting Officer&apos;s Evaluation of Contractor Performance Form</fullName>
                </value>
                <value>
                    <fullName>Project Officer&apos;s Evaluation of Contractor Performance Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Download_Forms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A pick list that displays the forms by category.</description>
        <label>RTP Form Repository</label>
        <referenceTo>RTPForms_Repository__c</referenceTo>
        <relationshipLabel>RTP Forms Repository (RTP Form Repository)</relationshipLabel>
        <relationshipName>RTP_Forms_Repository1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilities_Forms__c</fullName>
        <label>Facilities Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Adjustment Report (AAR)</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Employee Move Form</fullName>
                </value>
                <value>
                    <fullName>Key Control Registry and Inventory</fullName>
                </value>
                <value>
                    <fullName>Key Request Form</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle Operator Responsibilities Form (MVOR)</fullName>
                </value>
                <value>
                    <fullName>Penetration Permit</fullName>
                </value>
                <value>
                    <fullName>Personal Equipment Form</fullName>
                </value>
                <value>
                    <fullName>Property Action Request and Memo Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Forms__c</fullName>
        <label>Finance Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notice of Contract Costs Suspended and/or Disallowed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Forms__c</fullName>
        <label>Health &amp; Safety Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chemical Management - Chemical Procurement Form</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Chemical Management - Chemical Reconciliation Form</fullName>
                </value>
                <value>
                    <fullName>Chemical Management - Procurement Approval Form</fullName>
                </value>
                <value>
                    <fullName>Confined Space &amp; Permit-Required Confined Space Recognition</fullName>
                </value>
                <value>
                    <fullName>Confined Space Entry Program</fullName>
                </value>
                <value>
                    <fullName>Hot Work Permit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Human_Resources_Forms__c</fullName>
        <label>Human Resources Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awards Checklist</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CA-16 Authorization for Examinations and/or Treatment</fullName>
                </value>
                <value>
                    <fullName>Employee Separation Checklist</fullName>
                </value>
                <value>
                    <fullName>Leave Bank Election Form</fullName>
                </value>
                <value>
                    <fullName>PD Amendment</fullName>
                </value>
                <value>
                    <fullName>Request to Donate Leave to a Leave Recipient within EPA</fullName>
                </value>
                <value>
                    <fullName>Retirement Benefits Questionnaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Forms__c</fullName>
        <label>IT Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GPO-3868, Notification of Intent to Publish</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>GPO-952, Desktop Publishing/Disk Information</fullName>
                </value>
                <value>
                    <fullName>Records Transmittal and Receipt (SF - 135)</fullName>
                </value>
                <value>
                    <fullName>Request for Information Resources Services</fullName>
                </value>
                <value>
                    <fullName>Telephone Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Forms__c</fullName>
        <label>Other Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Miscellaneous Obligation Document</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Recreation Association Application</fullName>
                </value>
                <value>
                    <fullName>Recreation Association Renewal Application</fullName>
                </value>
                <value>
                    <fullName>Vanpool Driver Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTP_Form_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RTP Form Repository</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Categories__c</field>
                <operation>equals</operation>
                <value>Contracts</value>
            </filterItems>
            <infoMessage>BPA
COE
POE</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RTPForms_Repository__c</referenceTo>
        <relationshipLabel>RTP Forms Repository</relationshipLabel>
        <relationshipName>RTP_Forms_Repository</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RTP Form Repository</label>
    <nameField>
        <label>RTPForms Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTP Forms Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>